// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button #active 1`] = `
<button
  aria-label={null}
  className="toolbar-button toolbar-button--active"
  data-balloon={true}
  name={null}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
/>
`;

exports[`Button #icon 1`] = `
<button
  aria-label={null}
  className="toolbar-button"
  data-balloon={true}
  name={null}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  <Icon
    className=""
    name="icon-test"
    title={null}
  />
</button>
`;

exports[`Button #label 1`] = `
<button
  aria-label={null}
  className="toolbar-button"
  data-balloon={true}
  name={null}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Test label
</button>
`;

exports[`Button #name 1`] = `
<button
  aria-label={null}
  className="toolbar-button"
  data-balloon={true}
  name="TEST"
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
/>
`;

exports[`Button empty 1`] = `
<button
  aria-label={null}
  className="toolbar-button"
  data-balloon={true}
  name={null}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  type="button"
/>
`;
